lab1/Test/L1-A-13-34.output
Error Type B at Line 1
Error Type B at Line 5
Error Type A at Line 12
Error Type B at Line 14
Error Type B at Line 30
Error Type A at Line 37
Error Type B at Line 39
Error Type A at Line 40
